--- a/kontakt.html
+++ b/kontakt.html
@@ -46,51 +46,60 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <div class="card mb-3 mt-3">
+        <div class="card border-danger mb-3 mt-3">
           <div class="card-body">
             <h5 class="card-title">Kontakt</h5>
           </div>
         </div>
       </div>
       <div class="col-6">
-        <div class="card mb-3 mt-3">
+        <div class="card border-danger mb-3 mt-3">
           <div class="card-body">
             <h5>Standort:</h5>
-            <p class="card-text">Gizehstrasse 42, 6009 Gizeh, Ägypten
+            <p class="card-text">Gizehstrasse 42, 6009 Gizeh, Ägypten</p>
             <h5>Inhaber:</h5>Masir der Pharaoh
-            </p>
           </div>
         </div>
       </div>
     </div>
-    <div class="card mt-5">
+    <div class="card border-danger border-bottom-0 mt-3 mb-5">
       <div class="card-body">
         <h5 class="card-title">Mitarbeiter</h5>
       </div>
-    </div>
-    <div class="card-group mb-5">
-      <div class="card">
-        <img src="Pics/Mitarbeiter1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Nate</h5>
-          <p class="card-text">Ihm war anfangs viel zu heisst, jedoch geht es mit seinem Hut deutlich besser,
-            Sonnencreme muss er nach wie vor viel benutzen.</p>
+      <!-- </div> -->
+      <div class="card-group">
+        <div class="card">
+          <img src="Pics/Mitarbeiter1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nate</h5>
+            <p class="card-text">
+            <ul style="list-style: none; margin-left: 0; padding-left: 0;">
+              <li>Anerkannter Pro-memer 🌝</li>
+              <li>Videokünstler 🎙🎞</li>
+              <li>Gamer 🎮🕹</li>
+              <li>Musiker 🎸</li>
+              <li>Streamer 🎥</li>
+              <li>Tierfreund 😸</li>
+            </ul>
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="Pics/Mitarbeiter2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Melissa</h5>
-          <p class="card-text">Sie ist eine fleissige Arbeiterin, die erst ihre Angst vor Schlangen überwinden musste.
-          </p>
+        <div class="card">
+          <img src="Pics/Mitarbeiter2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Hubschmid</h5>
+            <p class="card-text">Er ist nicht nur aufpasser der Wüstenhamster, sondern auch Schmied, er schmiedet aber
+              nur Hübe.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="Pics/Mitarbeiter3.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Schoel</h5>
-          <p class="card-text">Schoel ist ein treuer und langjähriger angestellter, doch er ist auch ein guter Kollege
-            des Inhabers.</p>
+        <div class="card">
+          <img src="Pics/Mitarbeiter3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Schoel White</h5>
+            <p class="card-text">Chemiker, Koch, Familienvater, Zoologe und Informatiker. Er ist Fan eines
+              Ronaldoimitats und will unbedingt eine Unterschrift von ihm.</p>
+          </div>
         </div>
       </div>
     </div>
