--- a/tiere.html
+++ b/tiere.html
@@ -11,7 +11,7 @@
 </head>
 
 <body
-  style="background-image: url(Pics/Wueste.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+  style="background-image: url(Pics/Wueste2.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <nav class="navbar sticky-top navbar-expand-lg bg-warning" data-bs-theme="light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -151,7 +151,7 @@
             <img src="Pics/Skorpion2.png" class="img-fluid" alt="...">
           </div>
           <div class="col-6">
-            <h5 class="card-title">Skoprione</h5>
+            <h5 class="card-title">Skorpione</h5>
             <p class="card-text">Skorpione sind faszinierende Tiere, die in vielen Wüstenregionen der Welt zu finden
               sind. Obwohl sie oft als gefährliche Tiere angesehen werden, haben Skorpione auch eine wichtige Rolle im
               Ökosystem. In unserem Zoo haben wir eine Sammlung von Skorpionen, die in speziell gestalteten Terrarien
