--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         <use xlink:href="#bootstrap"></use>
       </svg>
       <h1 class="text-body-emphasis">Wüstenzoo - Öffnungszeiten</h1>
-      <p class="col-lg-8 mx-auto fs-5 text-muted">
-        Montag - Freitag: 9:00 - 17:00 Uhr
-        <br>Samstag & Sonntag: 9:00 - 18:00 Uhr
+      <a class="col-lg-8 mx-auto fs-5 text-muted"></a>
+        <p class="col-lg-8 mx-auto fs-5 text-muted">Montag - Freitag: 9:00 - 17:00 Uhr
+        <br>Samstag & Sonntag: 9:00 - 18:00 Uhr</p>
         <br>
       <p class="col-lg-8 mx-auto fs-8 text-muted">Änderungen stünden <code>HIER</code></p>
       <h1 class="text-body-emphasis">Standort</h1>
       <br>
       <p class="col-lg-8 mx-auto fs-8 text-muted">Gizehstrasse 42, 6009 Gizeh, Ägypten</p>
-      </p>
+      
       <div class="mb-5">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Eindrücke
@@ -67,11 +67,10 @@
     </div>
     <div class="row">
       <div class="col-6">
-        <div class="card border-danger mt-3">
+        <div class="card border-danger mt-3 mb-5">
           <div class="card-body text-dark">
             <h5 class="card-title">Unser Konzept</h5>
-            <p class="card-text"><br>Das Konzept des Wüstenzoos entstand in den frühen 2000er Jahren, als Zoos begannen,
-              sich auf die Verbesserung der Lebensbedingungen für ihre Tiere zu konzentrieren. Experten aus
+            <p class="card-text"><br>Wüstenzoos entstanden in den frühen 2000er. Experten aus
               verschiedenen
               Bereichen entwickelten ein Design, das es Wüstentieren ermöglicht, in einer Umgebung zu leben, die ihren
               natürlichen
@@ -86,22 +85,22 @@
             <h5 class="card-title">Unsere Tiere</h5>
           </div>
           <div class="list-group list-group-flush border-top-0">
-            <a href="tiere.html#kamele" type="button" class="list-group-item list-group-item-action"
+            <a href="tiere.html#kamele" class="list-group-item list-group-item-action"
               aria-current="true">Kamele</a>
-            <a href="tiere.html#kobras" type="button" class="list-group-item list-group-item-action">Kobras</a>
-            <a href="tiere.html#wüstenhamster" type="button"
+            <a href="tiere.html#kobras" class="list-group-item list-group-item-action">Kobras</a>
+            <a href="tiere.html#wüstenhamster" 
               class="list-group-item list-group-item-action">Wüstenhamster</a>
-            <a href="tiere.html#gila-krustenechse" type="button"
+            <a href="tiere.html#gila-krustenechse" 
               class="list-group-item list-group-item-action">Gila-Krustenechse</a>
-            <a href="tiere.html#fennek-füchse" type="button"
+            <a href="tiere.html#fennek-füchse" 
               class="list-group-item list-group-item-action">Fennek-Füchse</a>
-            <a href="tiere.html#skorpione" type="button" class="list-group-item list-group-item-action">Skorpione</a>
+            <a href="tiere.html#skorpione" class="list-group-item list-group-item-action">Skorpione</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -110,7 +109,6 @@
         <div class="modal-body">
           <div class="card border-danger my-3">
             <div class="card-body text-dark">
-              <h5 class="card-title"></h5>
               <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="3250">
